# psicometrics

./: .env.production  .gitignore  AGENTS.md  README.md  SECURITY.md  cloudflare.toml  deny.toml  docker-compose.yml  fly.toml  render.yaml
.github/workflows/: ci.yml
backend/: .env.example  Cargo.toml  Dockerfile  add_full_i18n.py  add_i18n_support.py  build_check.rs  pyproject.toml
backend/.cargo/: config.toml
backend/app/: __init__.py  account_store.py  analytics.py  community_store.py  compatibility.py  config.py  data_loader.py  database.py  email_service.py  main.py  payment_service.py  report_generator.py  validation.py
backend/app/data/: dark_triad_questions.json  enneagram_questions.json
backend/app/i18n/: __init__.py
backend/app/models/: __init__.py
backend/app/routers/: __init__.py  _store.py  accounts.py  analytics.py  auth.py  b2b.py  community.py  health.py  onboarding.py  payments.py  tests.py
backend/app/schemas/: __init__.py  big_five.py  dark_triad.py  disc.py  enneagram.py  human_design.py  mbti.py
backend/app/scoring/: __init__.py  attachment_style.py  big_five.py  career_aptitude.py  dark_triad.py  disc.py  emotional_intelligence.py  enneagram.py  human_design.py  interpretation.py  love_languages.py  mbti.py  via_strengths.py
backend/app/security/: __init__.py  audit.py  auth.py  csrf.py  device_attestation.py  headers.py  rate_limit.py  validation.py  zero_trust.py  zero_trust_client.py
backend/data/: big_five_questions.json  dark_triad_questions.json  disc_questions.json  enneagram_questions.json  human_design_data.json  mbti_questions.json
backend/migrations/: 001_init.sql
backend/src/: accounts.rs  analytics.rs  auth.rs  community.rs  community_seed.rs  compatibility.rs  config.rs  data.rs  database.rs  email.rs  error.rs  i18n.rs  interpretation.rs  lib.rs  main.rs  metrics.rs  payments.rs  report.rs  validation.rs
backend/src/community/: mod.rs  store.rs  types.rs
backend/src/middleware/: cors.rs  headers.rs  mod.rs  rate_limit.rs  request_id.rs  zero_trust.rs
backend/src/models/: mod.rs
backend/src/report/: chart.rs  info.rs  layout.rs  mod.rs  tests.rs
backend/src/routes/: accounts.rs  auth.rs  b2b.rs  community.rs  export.rs  health.rs  mod.rs  onboarding.rs  payments.rs  premium.rs  tests.rs
backend/src/routes/community/: comments.rs  mod.rs  posts.rs  stories.rs  testimonials.rs
backend/src/routes/tests/: compare.rs  mod.rs  report.rs  submit.rs
backend/src/scoring/: attachment_style.rs  big_five.rs  career_aptitude.rs  dark_triad.rs  disc.rs  emotional_intelligence.rs  enneagram.rs  human_design.rs  love_languages.rs  mbti.rs  mod.rs  via_strengths.rs
backend/tests/: api_test.rs  test_api.py  test_scoring.py  test_security.py
flutter_app/: README.md  pubspec.yaml
flutter_app/android/app/: build.gradle.kts
flutter_app/ios/: Podfile
flutter_app/ios/Runner/: Info.plist
flutter_app/ios/Runner.xcodeproj/: project.pbxproj
flutter_app/lib/: app.dart  main.dart
flutter_app/lib/config/: api.dart  theme.dart
flutter_app/lib/l10n/: app_en.arb  app_es.arb
flutter_app/lib/models/: question.dart  results.dart  test_info.dart
flutter_app/lib/screens/: account_screen.dart  compare_screen.dart  evolution_screen.dart  hd_form_screen.dart  history_screen.dart  home_screen.dart  onboarding_screen.dart  results_screen.dart  settings_screen.dart  splash_screen.dart  test_instructions_screen.dart  test_screen.dart
flutter_app/lib/services/: api_service.dart  history_service.dart  share_service.dart
flutter_app/lib/widgets/: body_graph.dart  dichotomy_choice.dart  disc_choice.dart  likert_scale.dart  radar_chart.dart  score_bar_chart.dart  test_card.dart
flutter_app/linux/: CMakeLists.txt
flutter_app/linux/runner/: my_application.cc
flutter_app/macos/Runner.xcodeproj/: project.pbxproj
flutter_app/web/: index.html  manifest.json
flutter_app/windows/: CMakeLists.txt
flutter_app/windows/runner/: Runner.rc  main.cpp
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/public/: manifest.json  sw.js
frontend/src/: App.tsx  analytics.ts  index.css  main.tsx
frontend/src/__tests__/: components.test.tsx
frontend/src/components/: BarChart.tsx  BodyGraph.tsx  CommentSection.tsx  DichotomyChoice.tsx  ForumPostCard.tsx  GlossaryPopover.tsx  HumanDesignForm.tsx  LanguageSwitcher.tsx  LikertScale.tsx  LoadingSkeleton.tsx  PDFDownloadButton.tsx  RadarChart.tsx  StoryCard.tsx  TestCard.tsx  TestimonialCard.tsx  ThemeToggle.tsx
frontend/src/data/: articles-education.ts  articles-health.ts  articles-parenting.ts  articles-spirituality.ts  blog-articles.ts  encyclopedia.ts  glossary.ts  navigation.ts  quizzes.ts  resources.ts  taxonomy.ts  type-comparisons.ts  type-hubs.ts
workers/: _routes.json
(+36 files in other folders)
