[package]
name = "psicometrics-backend"
version = "1.0.0"
edition = "2024"
description = "Tier S++ SecDevOps personality assessment platform - Rust backend"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ztf = { path = "../../ztf", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
once_cell = "1"
envy = "0.3"
