[package]
name = "psicometrics-backend"
version = "1.0.0"
edition = "2024"
description = "Tier S++ SecDevOps personality assessment platform - Rust backend"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
prometheus = { version = "0.14", features = ["process"] }
governor = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ztf = { git = "https://github.com/MethodWhite/ztf", branch = "main" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
once_cell = "1"
envy = "0.3"
printpdf = "0.7"
textwrap = "0.16"
parking_lot = "0.12"
hmac = "0.12"
sha2 = "0.10"

sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
jsonwebtoken = "9"
bcrypt = "0.16"
thiserror = "1"
serde_urlencoded = "0.7"
reqwest = { version = "0.12", features = ["json"] }
async-stripe = { version = "0.41.0", features = ["checkout", "billing", "webhook-events", "runtime-tokio-hyper-rustls", "events"] }

[dev-dependencies]
tokio-test = "0.4"
