[project]
name = "psicometrics-backend"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "httpx>=0.28",
    "python-multipart>=0.0.17",
    "jinja2",
    "stripe",
    "argon2-cffi>=23.1",
    "pyjwt>=2.9",
    "prometheus-client>=0.21",
    "reportlab>=4.2",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
